objects/PropertyBill__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DueDate__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Property__c</fullName>
        <label>Property</label>
        <referenceTo>Property__c</referenceTo>
        <relationshipLabel>Property Bills</relationshipLabel>
        <relationshipName>Property_Bills</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Quarter__c</fullName>
        <label>Quarter</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Paid</fullName>
                </value>
                <value>
                    <fullName>Unpaid</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Alley Paving</fullName>
                </value>
                <value>
                    <fullName>ECB</fullName>
                </value>
                <value>
                    <fullName>Water</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Property Bill</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PB-{0000}</displayFormat>
        <label>Property Tax Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Property Bills</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>